Dragged in images do not display orange highlight border when selected #58551

Closed
opened 2018-12-02 21:37:46 +01:00 by green giant · 5 comments

System Information
Operating system: Windows 10
Graphics card: Gtx 970

Blender Version
Broken: 2.80 Beta Date: 2018-11-30 22:29

Short description of error
Dragged in images do not display an orange highlighted border when selected.

Exact steps for others to reproduce the error
Drag in an image plane. Click to select it. Observe that it does not have a highlighted orange border when selected like other objects.

**System Information** Operating system: Windows 10 Graphics card: Gtx 970 **Blender Version** Broken: 2.80 Beta Date: 2018-11-30 22:29 **Short description of error** Dragged in images do not display an orange highlighted border when selected. **Exact steps for others to reproduce the error** Drag in an image plane. Click to select it. Observe that it does not have a highlighted orange border when selected like other objects.
Author

Added subscriber: @greengiant83

Added subscriber: @greengiant83
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Clément Foucault was assigned by Jacques Lucke 2018-12-03 12:57:20 +01:00
Member

Related to #58101 which is fixed already. However I still don't see the selection outline in the newest build from just now.

Related to #58101 which is fixed already. However I still don't see the selection outline in the newest build from just now.

This issue was referenced by 1dac00f7ad

This issue was referenced by 1dac00f7ad179287c873b50e9a038117d4141805

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58551
No description provided.