Fix T58551: Dragged in images do not display orange highlight border when selected